# gitlab-commit-search

./: .gitignore  Pipfile  README.md  commit_search.py  gitlab-commit-search.py  output.csv  output.html  requirements.txt  setup.cfg  template.html
gitlab_commit_search/: gitlab_commit_search.py
templates/: template.html
