[metadata]
# replace with your username:
name = gitlab-commit-search-DHUKK
version = 0.0.1
author = Dennis Harrop
author_email = dennisjohnharrop@gmail.com
description = Utilities for searching commits across multiple projects. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DHUKK/gitlab-commit-search/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6